--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -67,6 +67,13 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.42</version>
 		</dependency>
+
+
+			<!-- ... other dependency elements ... -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-security</artifactId>
+			</dependency>
 	</dependencies>
 
 	<build>
